# css-project

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE.md  PLOTS.MD  README.md  pyproject.toml  requirements.txt  run_analysis.sh
.github/workflows/: benchmark.yml  documentation.yml  pull-request.yml  release.yml  test-results.yml  test.yml
notebooks/: fix_heatmap_axis.ipynb  kernel_test.ipynb
scripts/: animate_phase_transition.py  create_gifs.py  heatmap_all.py  kolmogorov_heatmap.py  measure_complexity.py  native_invasive_phase_plots.py  native_only_phase_plots.py  plot_invasive_impact.py  plot_simple_finegrained.py  plot_simple_logistic.py  proportion_alive_pos_weight.py  proportion_alive_starting_prob.py  proportion_alive_starting_prob_finegrained.py  proportion_alive_starting_prob_logistic.py  proportion_alive_weight_initial_prob.py  proportion_alive_weights.py  results.prof  run_finegrained.py  run_logistic.py  run_vegetation.py  species_densities_coarsegrained.py  species_densities_coursegrained.py  species_densities_logistic.py  steady_state.py  steady_state_logistic.py  test_simple_ca.py  visualise.py  visualise_cluster_size.py  visualise_veg_invasive.py  visualise_vegetation.py  visualize_vegetation_total_alive.py
scripts/appendix/: kolmogorov_heatmap.py  measure_complexity.py  native_invasive_phase_plots.py  proportion_alive_pos_weight.py  proportion_alive_starting_prob_finegrained.py  proportion_alive_starting_prob_logistic.py  proportion_alive_weight_initial_prob.py  proportion_alive_weights.py  run_finegrained.py  steady_state.py  steady_state_finegrained.py  steady_state_logistic.py  test_heatmap_fix.py  visualise.py  visualise_cluster_size.py
src/css_project/: __init__.py  complexity.py  fine_grained.py  kernel.py  logistic.py  model.py  simple_ca.py  vegetation.py  visualisation.py
tests/: test_coarse_grained.py  test_complexity.py  test_fine_grained.py  test_grid_creation.py  test_kernels.py
