[project]
name = "css-project"
version = "0.1.0"
description = "Complex Systems Simulation course group project."
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
    { name = "Lisa Pijpers", email = "lisa.pijpers@student.uva.nl" },
    { name = "Petr Chalupsky", email = "chalupskypetr22@gmail.com" },
    { name = "Frederieke Loth", email = "frederiekeloth@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "powerlaw>=1.5",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
css-project = "css_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    # pydocstyle
    #"D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
#ignore = [
#    # removes unused imports
#    "F401"

#[tool.ruff.lint.pydocstyle]
#convention = "google"
